refactor(annotation-processor): tidy up code